updated meta description and name

--- a/index.html
+++ b/index.html
@@ -1,67 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kevin Magli - WDD 230 - Web Frontend Development</title>
-    <meta description="Kevin Magliocchi's WDD 230 - Web Frontend Development course assignment portal">
-    <meta author="Kevin Magliocchi">
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/larger.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;600&display=swap" rel="stylesheet">
-</head>
-<body>
+    <meta
+      name="description" content="Kevin Magliocchi's WDD 230 - Web Frontend Development course assignment portal."
+    />
+    <meta name="author" content="Kevin Magliocchi" />
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/larger.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <img id="profile" src="images/me.jpg" alt="placeholder for optimized profile picture">
-        <h1>Kevin Magli</h1>
+      <img
+        id="profile"
+        src="images/me.jpg"
+        alt="placeholder for optimized profile picture"
+      />
+      <h1>Kevin Magli</h1>
     </header>
     <nav>
-        <a href="index.html" class="home"><span>Home</span></a>
-        <a href="#" class="chamber"><span>Chamber</span></a>
-        <a href="#" class="siteplan"><span>Site Plan</span></a>
-        <a href="#" class="form"><span>Form</span></a>
+      <a href="index.html" class="home"><span>Home</span></a>
+      <a href="#" class="chamber"><span>Chamber</span></a>
+      <a href="#" class="siteplan"><span>Site Plan</span></a>
+      <a href="#" class="form"><span>Form</span></a>
     </nav>
     <main>
-        <h1>WDD 230: Web Frontend Development</h1>
-        <hr class="solid">
-        <div class="cards-container">
-           <section class="card">
-            <h2>Learning Activities</h2>
-            <ul>
-                <li>Week 01: <a href="#">link to activity</a></li>
-                <li>Week 02: </li>
-                <li>Week 03: </li>
-                <li>Week 04: </li>
-                <li>Week 05: </li>
-                <li>Week 06: </li>
-            </ul>
-            </section>
-            <section class="card">
-                <h2>Information</h2>
-                <p id="location">Location, Bigger Location</p>
-                <p id="weather">-the weather-</p>
-                <p id="visits">Number of visits: >9000!</p>
-            </section> 
-        </div> 
+      <h1>WDD 230: Web Frontend Development</h1>
+      <hr class="solid" />
+      <div class="cards-container">
+        <section class="card">
+          <h2>Learning Activities</h2>
+          <ul>
+            <li>Week 01: <a href="#">link to activity</a></li>
+            <li>Week 02:</li>
+            <li>Week 03:</li>
+            <li>Week 04:</li>
+            <li>Week 05:</li>
+            <li>Week 06:</li>
+          </ul>
+        </section>
+        <section class="card">
+          <h2>Information</h2>
+          <p id="location">Location, Bigger Location</p>
+          <p id="weather">-the weather-</p>
+          <p id="visits">Number of visits: >9000!</p>
+        </section>
+      </div>
     </main>
     <footer>
-        <p id="copyright">
-            &copy;<span id="year"></span>
-        </p>
-        <p id="author">&bull; Kevin Magliocchi &bull;</p>
-        <div class="adress">
-            <p id="city">São Paulo </p>
-            <img id="flag" src="images/flag.png" alt="brazil flag">
-        </div>
-        <p id="updated">
-            Last Modification: <span id="lastMod"></span>
-        </p>
+      <p id="copyright">&copy;<span id="year"></span></p>
+      <p id="author">&bull; Kevin Magliocchi &bull;</p>
+      <div class="adress">
+        <p id="city">São Paulo</p>
+        <img id="flag" src="images/flag.png" alt="brazil flag" />
+      </div>
+      <p id="updated">Last Modification: <span id="lastMod"></span></p>
     </footer>
 
     <script src="scripts/getDates.js"></script>
-
-</body>
+  </body>
 </html>
-
