changed formatting on html

--- a/index.html
+++ b/index.html
@@ -1,30 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kevin Magli - WDD 230 - Web Frontend Development</title>
-    <meta
-      name="description" content="Kevin Magliocchi's WDD 230 - Web Frontend Development course assignment portal."
-    />
-    <meta name="author" content="Kevin Magliocchi" />
-    <link rel="stylesheet" href="styles/base.css" />
-    <link rel="stylesheet" href="styles/larger.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
+    <meta name="description" content="Kevin Magliocchi's WDD 230 - Web Frontend Development course assignment portal.">
+    <meta name="author" content="Kevin Magliocchi">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;600&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
-      <img
-        id="profile"
-        src="images/me.jpg"
-        alt="placeholder for optimized profile picture"
-      />
-      <h1>Kevin Magli</h1>
+      <img id="profile" src="images/me.jpg" alt="placeholder for optimized profile picture">
+      <span>Kevin Magli</span>
     </header>
     <nav>
       <a href="index.html" class="home"><span>Home</span></a>
@@ -34,7 +25,7 @@
     </nav>
     <main>
       <h1>WDD 230: Web Frontend Development</h1>
-      <hr class="solid" />
+      <hr class="solid">
       <div class="cards-container">
         <section class="card">
           <h2>Learning Activities</h2>
@@ -60,7 +51,7 @@
       <p id="author">&bull; Kevin Magliocchi &bull;</p>
       <div class="adress">
         <p id="city">São Paulo</p>
-        <img id="flag" src="images/flag.png" alt="brazil flag" />
+        <img id="flag" src="images/flag.png" alt="brazil flag">
       </div>
       <p id="updated">Last Modification: <span id="lastMod"></span></p>
     </footer>
