added links to index and siteplan

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav>
       <a href="index.html" class="home"><span>Home</span></a>
       <a href="#" class="chamber"><span>Chamber</span></a>
-      <a href="#" class="siteplan"><span>Site Plan</span></a>
+      <a href="week01/chamber-site-plan.html" class="siteplan"><span>Site Plan</span></a>
       <a href="#" class="form"><span>Form</span></a>
     </nav>
     <main>
