--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -12,6 +12,7 @@
 <body>
     <header>    
         <h1>Chamber of Commerse Site Plan</h1>
+        <a href="index.html">Go back</a>
     </header>
     <main>
         <div>
