changes in alt for images

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -47,8 +47,8 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eum tempore odio distinctio incidunt eos non natus excepturi officiis, aspernatur et maxime quam alias unde. Quas aperiam cum vitae inventore.</p>
         </div>
         <div class="wireframe">
-            <img src="images/wireframe.png" alt="placeholder for optimized wireframe home page">
-            <img src="images/wireframe-mobile.png" alt="placeholder for optimized wireframe home page in mobile">
+            <img src="images/wireframe.png" alt="placeholder for home page wireframe in desktop">
+            <img src="images/wireframe-mobile.png" alt="placeholder for home page wireframe in mobile">
         </div>
     </main>
 </body>
