added last few changes

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <meta name="description" content="Chamber of Commerce Site Plan">
+    <meta name="author" content="Kevin Magliocchi">
 </head>
 <body>
     <header>    
@@ -47,6 +49,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eum tempore odio distinctio incidunt eos non natus excepturi officiis, aspernatur et maxime quam alias unde. Quas aperiam cum vitae inventore.</p>
         </div>
         <div class="wireframe">
+            <h2>Wireframe</h2>
             <img src="images/wireframe.png" alt="placeholder for home page wireframe in desktop">
             <img src="images/wireframe-mobile.png" alt="placeholder for home page wireframe in mobile">
         </div>
