update on line 17

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -14,7 +14,7 @@
 <body>
     <header>    
         <h1>Chamber of Commerse Site Plan</h1>
-        <a href="wdd230/index.html">Go back</a>
+        <a href="../index.html">Go back</a>
     </header>
     <main>
         <div>
