updated the index with sharing meta tags

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;600&display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico">
+    <meta property="og:title" content="Kevin Magli - WDD 230 - Web Frontend Development">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="images/me.jpg">
+    <meta property="og:url" content="https://kevinmagli.github.io/">
   </head>
   <body>
     <header>
