--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <span>Kevin Magli</span>
     </header>
     <nav>
-      <a href="index.html" class="home"><span>Home</span></a>
+      <a href="index.html" class="active"><span>Home</span></a>
       <a href="#" class="chamber"><span>Chamber</span></a>
       <a href="week01/chamber-site-plan.html" class="siteplan"><span>Site Plan</span></a>
       <a href="#" class="form"><span>Form</span></a>
