Added BOM top 10 activity link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <h2>Learning Activities</h2>
           <ul>
             <li>Week 01: <a href="#">link to activity</a></li>
-            <li>Week 02: <a href="week02/design.html">Design Principles</a></li>
+            <li>Week 02: <a href="week02/design.html">Design Principles</a> | <a href="https://codepen.io/Kevin-Magli/pen/oNOrJKJ">Active Page Codepen</a> | <a href="week02/bom.html">BOM Top 10</a></li>
             <li>Week 03:</li>
             <li>Week 04:</li>
             <li>Week 05:</li>
