--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Kevin Magli - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="Kevin Magliocchi's WDD 230 - Web Frontend Development course assignment portal.">
     <meta name="author" content="Kevin Magliocchi">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
