Added hamburger menu for mobile view and a dark mode button

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
   <body>
     <header>
       <img id="profile" src="images/me.jpg" alt="placeholder for optimized profile picture">
-      <span>Kevin Magli</span>
+      <span id="name">Kevin Magliocchi</span>
+      <button id="dark"></button>
     </header>
-    <nav>
+    <button id="menu"></button>
+    <nav id="navigation">
       <a href="index.html" class="active"><span>Home</span></a>
       <a href="#" class="chamber"><span>Chamber</span></a>
       <a href="week01/chamber-site-plan.html" class="siteplan"><span>Site Plan</span></a>
@@ -63,5 +65,6 @@
     </footer>
 
     <script src="scripts/getDates.js"></script>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
