Updated last few things to commit

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -62,21 +62,23 @@
                 <p>About</p>
             </a>
         </div>
-        <div class="banner">
-            <h2>Weather</h2>
-            <p>some degrees in SBC</p>
-            <img src="https://via.placeholder.com/800x200" alt="Current Weather Placeholder">
+        <div class="banner-grid">
+            <div class="banner">
+                <h2>Weather</h2>
+                <p>some degrees in SBC</p>
+                <img src="https://via.placeholder.com/800x200" alt="Current Weather Placeholder">
+            </div>
+            <div class="banner">
+                <h2>Company Spotlight 1</h2>
+                <img src="https://via.placeholder.com/800x200" alt="Company Spotlight 1 Placeholder">
+            </div>
         </div>
-        <div class="banner">
-            <h2>Company Spotlight 1</h2>
-            <img src="https://via.placeholder.com/800x200" alt="Company Spotlight 1 Placeholder">
-        </div>
+        
     </main>
-
     <footer>
         <p>&copy;<span id="year"></span> Kevin Magliocchi - WDD 230</p>
         <p>Social Media:  <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">X</a></p>
-        <p>Last Modification: <span id="lastMod"></span></p>
+        <p id="updated">Last Modification: <span id="lastMod"></span></p>
     </footer>
 
     <script src="../scripts/getDates.js"></script>
