added link to chamber site in home

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <button id="menu"></button>
     <nav id="navigation">
       <a href="index.html" class="active"><span>Home</span></a>
-      <a href="#" class="chamber"><span>Chamber</span></a>
+      <a href="chamber/index.html" class="chamber"><span>Chamber</span></a>
       <a href="week01/chamber-site-plan.html" class="siteplan"><span>Site Plan</span></a>
       <a href="#" class="form"><span>Form</span></a>
     </nav>
