Minor corrections to pass quality test

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SBC Chamber - Home</title>
+    <title>SBC Chamber of Commerce - Home</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico">
+    <meta name="description" content="Kevin Magliocchi's WDD 230 - SBC Chamber of Commerce course assignment portal.">
+    <meta name="author" content="Kevin Magliocchi">
     <meta property="og:title" content="Kevin Magli - WDD 230 - SBC Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="placeholder.jpg">
@@ -33,7 +35,7 @@
     <main>
         <header>
             <img id="logo" src="images/logo.png" alt="SBC Chamber logo">
-            <h1>SBC Chamber</h1>
+            <h1>SBC Chamber of Commerce</h1>
         </header>
         <img id="hero" src="images/sbc-hero.webp" alt="Hero Image Placeholder">
         <div class="action">
