--- a/chamber/index.html
+++ b/chamber/index.html
@@ -15,7 +15,7 @@
     <meta name="author" content="Kevin Magliocchi">
     <meta property="og:title" content="Kevin Magli - WDD 230 - SBC Chamber of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="placeholder.jpg">
+    <meta property="og:image" content="images/sbc-hero.webp">
     <meta property="og:url" content="https://kevinmagli.github.io/">
 </head>
 <body>
