--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <ul>
             <li>Week 01: <a href="#">link to activity</a></li>
             <li>Week 02: <a href="week02/design.html">Design Principles</a> | <a href="https://codepen.io/Kevin-Magli/pen/oNOrJKJ">Active Page Codepen</a> | <a href="week02/bom.html">BOM Top 10</a></li>
-            <li>Week 03:</li>
+            <li>Week 03: <a href="week03/images/landscape-tiny.webp"> WebP </a></li>
             <li>Week 04:</li>
             <li>Week 05:</li>
             <li>Week 06:</li>
