Added contact information on footer

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -80,6 +80,7 @@
     <footer>
         <p>&copy;<span id="year"></span> Kevin Magliocchi - WDD 230</p>
         <p>Social Media:  <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">X</a></p>
+        <p> Contact Information: <a href="chamber.SBC@gmail.com">Email</a> | <a href="+55 11 3218-1923">Phone</a> | <a href="Praça Samuel Sabatini, S/N - Centro, São Bernardo do Campo - SP, 09810-390">Address</a></p>
         <p id="updated">Last Modification: <span id="lastMod"></span></p>
     </footer>
 
