--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
               <a href="week03/images/landscape-tiny.webp">WebP</a>
               <a href="week03/lazyload.html">Lazy Load</a>
               <a href="week03/responsive-images.html">Responsive Images</a>
+              <a href="week03/bom.html">BOM Top 10 but it remembers items when you f5</a>
             </li>
             <li>Week 04:</li>
             <li>Week 05:</li>
