--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
       <a href="#" class="form"><span>Form</span></a>
     </nav>
     <main>
+      <div class="hero">
+        <picture>
+             <source id="hero-small" srcset="images/hero-small.webp" media="(max-width: 500px)">
+             <source id="hero-medium" srcset="images/hero-medium.webp" media="(max-width: 1000px)">
+             <img id="hero" src="images/hero-large.webp" alt="table setting" width="1275" height="800">
+         </picture> 
+     </div>
       <h1>WDD 230: Web Frontend Development</h1>
       <hr class="solid">
       <div class="cards-container">
@@ -39,11 +46,15 @@
           <h2>Learning Activities</h2>
           <ul>
             <li>Week 01: <a href="#">link to activity</a></li>
-            <li>Week 02: <a href="week02/design.html">Design Principles</a> | <a href="https://codepen.io/Kevin-Magli/pen/oNOrJKJ">Active Page Codepen</a> | <a href="week02/bom.html">BOM Top 10</a></li>
+            <li>Week 02: 
+              <a href="week02/design.html">Design Principles</a> | 
+              <a href="https://codepen.io/Kevin-Magli/pen/oNOrJKJ">Active Page Codepen</a> | 
+              <a href="week02/bom.html">BOM Top 10</a>
+            </li>
             <li>Week 03: 
-              <a href="week03/images/landscape-tiny.webp">WebP</a>
-              <a href="week03/lazyload.html">Lazy Load</a>
-              <a href="week03/responsive-images.html">Responsive Images</a>
+              <a href="week03/images/landscape-tiny.webp">WebP</a> | 
+              <a href="week03/lazyload.html">Lazy Load</a> | 
+              <a href="week03/responsive-images.html">Responsive Images</a> | 
               <a href="week03/bom.html">BOM Top 10 but it remembers items when you f5</a>
             </li>
             <li>Week 04:</li>
