Corrected layout of cards on homepage and added webp imgs

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header>
-      <img id="profile" src="images/me.jpg" alt="placeholder for optimized profile picture">
+      <img id="profile" src="images/me.webp" alt="placeholder for optimized profile picture">
       <span id="name">Kevin Magliocchi</span>
       <button id="dark"></button>
     </header>
@@ -38,6 +38,7 @@
              <source id="hero-medium" srcset="images/hero-medium.webp" media="(max-width: 1000px)">
              <img id="hero" src="images/hero-large.webp" alt="table setting" width="1275" height="800">
          </picture> 
+         <h2>São Paulo Temple</h2>
      </div>
       <h1>WDD 230: Web Frontend Development</h1>
       <hr class="solid">
@@ -69,13 +70,14 @@
           <p id="visits">Number of visits: >9000!</p>
         </section>
       </div>
+      <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d233625.63481780572!2d-46.69690144255706!3d-23.80435181389051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce3fc6927dd0c3%3A0xcdcd0d550f9656cf!2sS%C3%A3o%20Bernardo%20do%20Campo%2C%20SP!5e0!3m2!1spt-BR!2sbr!4v1715997935125!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer>
       <p id="copyright">&copy;<span id="year"></span></p>
       <p id="author">&bull; Kevin Magliocchi &bull;</p>
       <div class="adress">
         <p id="city">São Paulo</p>
-        <img id="flag" src="images/flag.png" alt="brazil flag">
+        <img id="flag" src="images/flag.webp" alt="brazil flag">
       </div>
       <p id="updated">Last Modification: <span id="lastMod"></span></p>
     </footer>
