Added visit count

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
         <section class="card">
           <h2>Learning Activities</h2>
           <ul>
-            <li>Week 01: <a href="#">link to activity</a></li>
+            <li>Week 01: 
+              <a href="week01/holygrail.html">Holy Grail</a> | 
+              <a href="week01/media-query.html">Media Query</a> | 
+            </li>
             <li>Week 02: 
               <a href="week02/design.html">Design Principles</a> | 
               <a href="https://codepen.io/Kevin-Magli/pen/oNOrJKJ">Active Page Codepen</a> | 
@@ -67,7 +70,7 @@
           <h2>Information</h2>
           <p id="location">Location, Bigger Location</p>
           <p id="weather">-the weather-</p>
-          <p id="visits">Number of visits: >9000!</p>
+          <p>Number of visits: <span id="visits">0</span></p>
         </section>
       </div>
       <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d233625.63481780572!2d-46.69690144255706!3d-23.80435181389051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce3fc6927dd0c3%3A0xcdcd0d550f9656cf!2sS%C3%A3o%20Bernardo%20do%20Campo%2C%20SP!5e0!3m2!1spt-BR!2sbr!4v1715997935125!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
