--- a/chamber/index.html
+++ b/chamber/index.html
@@ -84,6 +84,7 @@
         <p id="updated">Last Modification: <span id="lastMod"></span></p>
     </footer>
 
+    <script src="../scripts/weather.js"></script>
     <script src="../scripts/getDates.js"></script>
     <script src="scripts/script.js"></script>
 </body>
