updated links on Chamber home

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,8 +25,8 @@
         <span></span>
     </Button>
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Discover</a>
+        <a href="index.html">Home</a>
+        <a href="discover.html">Discover</a>
         <a href="#">Sales</a>
         <a href="#">Events</a>
         <a href="#">Jobs & Business</a>
