Bugfixes after html and css validation

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -24,10 +24,6 @@
         <span></span>
         <span></span>
     </Button>
-    <div id="discover-logo">
-      <img id="discover-logo" src="images/logo.png" alt="logo of a plant in a chamber">
-      <p>SBC Chamber of Commerce</p>
-    </div>
     <nav>
         <a href="#">Home</a>
         <a href="#">Discover</a>
@@ -38,21 +34,23 @@
     </nav>
    <main>
       <div class="sidebar">
+        <div id="discover-logo">
+          <img src="images/logo.png" alt="logo of a plant in a chamber">
+          <h3>SBC Chamber of Commerce</h3>
+        </div>
         <div class="welcome">
-          <h2>
-            <p><span id="welcome-visitor">Welcome! Let us know if you have any questions.</span></p>
-          </h2>
+          <h2 id="welcome-visitor">Welcome! Let us know if you have any questions.</h2>
         </div>
         <!-- <hr class="solid"> -->
         <div class="events">
           <h3>Current events</h3>
           <img src="images/event.webp" alt="picture of a rollercoaster">
           <p>Kid's City Park 50% off during weekends!</p>
-          <p>Kid's in São Bernardo will be able to have a lot of fun in our beloved Kid's City Park with a 50% discount on weekends. This will take effect on the first weekend of the next month (June) and will be valid for the rest of the month. Don't miss this out!!</p>
+          <p>Kids in São Bernardo will be able to have a lot of fun in our beloved Kid's City Park with a 50% discount on weekends. This will take effect on the first weekend of the next month (June) and will be valid for the rest of the month. Don't miss this out!!</p>
         </div> 
         <!-- <hr class="solid">   -->
         <div class="calendar">
-          <iframe src="https://shoroukaziz.github.io/notion_widgets/calendar.html" frameborder="0"></iframe>
+          <iframe src="https://shoroukaziz.github.io/notion_widgets/calendar.html"></iframe>
         </div>   
       </div>
       <div class="feed">
@@ -117,7 +115,7 @@
     <footer>
         <p>&copy;<span id="year"></span> Kevin Magliocchi - WDD 230</p>
         <p>Social Media:  <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">X</a></p>
-        <p> Contact Information: <a href="chamber.SBC@gmail.com">Email</a> | <a href="+55 11 3218-1923">Phone</a> | <a href="Praça Samuel Sabatini, S/N - Centro, São Bernardo do Campo - SP, 09810-390">Address</a></p>
+        <p> Contact Information: <a href="chamber.SBC@gmail.com">Email</a> | <a href="#">Phone: +55 11 3218-1923</a> | <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj1i7W91a6GAxXfrJUCHYqkC7cQ8gF6BAgnEAI&url=%2Fmaps%2Fplace%2FPra%25C3%25A7a%2BSamuel%2BSabatini%2B-%2BVila%2BMarchi%2C%2BS%25C3%25A3o%2BBernardo%2Bdo%2BCampo%2B-%2BSP%2C%2B09810-390%2Fdata%3D!4m2!3m1!1s0x94ce42338fed5499%3A0x194ef44477df4860%3Fsa%3DX%26ved%3D1t%3A242%26ictx%3D111&usg=AOvVaw0tKgEkNbd-EasjBJimTiub&opi=89978449">Address: Praça Samuel Sabatini, S/N - Centro, São Bernardo do Campo - SP, 09810-390</a></p>
         <p id="updated">Last Modification: <span id="lastMod"></span></p>
     </footer>
 
