Discover page corrected for audit

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kevin Magli - WDD 230 - Discover</title>
-    <meta name="description" content="Kevin Magliocchi's WDD 230 - Discover Page.">
+    <title>SBC Chamber of Commerce - Discover</title>
+    <meta name="description" content="Kevin Magliocchi's WDD 230 - SBC Chamber of Commerce Discover Page.">
     <meta name="author" content="Kevin Magliocchi">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/base.css">
@@ -13,9 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;600&display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico">
-    <meta property="og:title" content="Kevin Magli - WDD 230 - Discover Page">
+    <meta property="og:title" content="Kevin Magli - WDD 230 - SBC Chamber of Commerce Discover Page">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/sbc-hero.webp">
+    <meta property="og:image" content="https://kevinmagli.github.io/wdd230/chamber/images/sbc-hero.webp">
     <meta property="og:url" content="https://kevinmagli.github.io/">
   </head>
   <body>
@@ -36,7 +36,7 @@
       <div class="sidebar">
         <div id="discover-logo">
           <img src="images/logo.png" alt="logo of a plant in a chamber">
-          <h3>SBC Chamber of Commerce</h3>
+          <h1>SBC Chamber of Commerce</h1>
         </div>
         <div class="welcome">
           <h2 id="welcome-visitor">Welcome! Let us know if you have any questions.</h2>
