minor update on footer

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -115,7 +115,7 @@
     <footer>
         <p>&copy;<span id="year"></span> Kevin Magliocchi - WDD 230</p>
         <p>Social Media:  <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">X</a></p>
-        <p> Contact Information: <a href="chamber.SBC@gmail.com">Email</a> | <a href="#">Phone: +55 11 3218-1923</a> | <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj1i7W91a6GAxXfrJUCHYqkC7cQ8gF6BAgnEAI&url=%2Fmaps%2Fplace%2FPra%25C3%25A7a%2BSamuel%2BSabatini%2B-%2BVila%2BMarchi%2C%2BS%25C3%25A3o%2BBernardo%2Bdo%2BCampo%2B-%2BSP%2C%2B09810-390%2Fdata%3D!4m2!3m1!1s0x94ce42338fed5499%3A0x194ef44477df4860%3Fsa%3DX%26ved%3D1t%3A242%26ictx%3D111&usg=AOvVaw0tKgEkNbd-EasjBJimTiub&opi=89978449">Address: Praça Samuel Sabatini, S/N - Centro, São Bernardo do Campo - SP, 09810-390</a></p>
+        <p> Contact Information: <a href="chamber.SBC@gmail.com">Email</a> | Phone: <a href="#">+55 11 3218-1923</a> | Address: <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj1i7W91a6GAxXfrJUCHYqkC7cQ8gF6BAgnEAI&url=%2Fmaps%2Fplace%2FPra%25C3%25A7a%2BSamuel%2BSabatini%2B-%2BVila%2BMarchi%2C%2BS%25C3%25A3o%2BBernardo%2Bdo%2BCampo%2B-%2BSP%2C%2B09810-390%2Fdata%3D!4m2!3m1!1s0x94ce42338fed5499%3A0x194ef44477df4860%3Fsa%3DX%26ved%3D1t%3A242%26ictx%3D111&usg=AOvVaw0tKgEkNbd-EasjBJimTiub&opi=89978449">Praça Samuel Sabatini, S/N - Centro, São Bernardo do Campo - SP, 09810-390</a></p>
         <p id="updated">Last Modification: <span id="lastMod"></span></p>
     </footer>
 
