minor changes to index, join and thankyou

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,7 +30,7 @@
         <a href="#">Sales</a>
         <a href="#">Events</a>
         <a href="#">Jobs & Business</a>
-        <a href="#">About</a>
+        <a href="join.html">Join Us</a>
     </nav>
     <main>
         <header>
