--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -32,11 +32,16 @@
         <a href="#">Jobs & Business</a>
         <a href="#">About</a>
     </nav>
-    <main>
+    <main id="thankyou-page">
         <header>
+            <img id="logo" src="images/logo.png" alt="SBC Chamber logo">
+            <h1>SBC Chamber of Commerce</h1>
+        </header>
+        <img id="hero" src="images/sbc-hero.webp" alt="Hero Image Placeholder">
+        <div class="message">
             <h1>Thank you for joining us!!</h1>
             <p>You will receive an E-mail with more information about your membership.</p>
-        </header>  
+        </div>
     </main>
     <footer>
         <p>&copy;<span id="year"></span> Kevin Magliocchi - WDD 230</p>
