added weather information

--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
           <h2>Information</h2>
           
           <div id="weather">
-            <div id="weather-icon"></div>
-            <div id="temp"></div>
-            <div id="condition"></div>
+            <figure>
+              <img id="weather-icon" src="" alt="weather icon">
+              <div id="weather-condition"></div>
+            </figure>
+            <div id="weather-temp"></div>
           </div>
           <p>Number of visits: <span id="visits">0</span></p>
         </section>
