--- a/index.html
+++ b/index.html
@@ -45,26 +45,7 @@
       <div class="cards-container">
         <section class="card">
           <h2>Learning Activities</h2>
-          <ul>
-            <li>Week 01: 
-              <a href="week01/holygrail.html">Holy Grail</a> | 
-              <a href="week01/media-query.html">Media Query</a> | 
-            </li>
-            <li>Week 02: 
-              <a href="week02/design.html">Design Principles</a> | 
-              <a href="https://codepen.io/Kevin-Magli/pen/oNOrJKJ">Active Page Codepen</a> | 
-              <a href="week02/bom.html">BOM Top 10</a>
-            </li>
-            <li>Week 03: 
-              <a href="week03/images/landscape-tiny.webp">WebP</a> | 
-              <a href="week03/lazyload.html">Lazy Load</a> | 
-              <a href="week03/responsive-images.html">Responsive Images</a> | 
-              <a href="week03/bom.html">BOM Top 10 but it remembers items when you f5</a>
-            </li>
-            <li>Week 04:</li>
-            <li>Week 05:</li>
-            <li>Week 06:</li>
-          </ul>
+          <div id="links-container"></div>
         </section>
         <section class="card">
           <h2>Information</h2>
