--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SBC Chamber of Commerce - Home</title>
+    <title>SBC Chamber of Commerce - Thank you page!</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -15,7 +15,7 @@
     <meta name="author" content="Kevin Magliocchi">
     <meta property="og:title" content="Kevin Magli - WDD 230 - SBC Chamber of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/sbc-hero.webp">
+    <meta property="og:image" content="https://kevinmagli.github.io/wdd230/images/sbc-hero.webp">
     <meta property="og:url" content="https://kevinmagli.github.io/">
 </head>
 <body>
@@ -25,17 +25,15 @@
         <span></span>
     </Button>
     <nav>
-        <a href="index">Home</a>
+        <a href="index.HTML">Home</a>
         <a href="discover.html">Discover</a>
-        <a href="#">Sales</a>
-        <a href="#">Events</a>
-        <a href="#">Jobs & Business</a>
-        <a href="#">About</a>
+        <a href="join.html">Join Us</a>
+        <a href="directory.html">Members</a>
     </nav>
     <main id="thankyou-page">
         <header>
             <img id="logo" src="images/logo.png" alt="SBC Chamber logo">
-            <h1>SBC Chamber of Commerce</h1>
+            <h1>SBC Chamber of Commerce - Thank you page!</h1>
         </header>
         <img id="hero" src="images/sbc-hero.webp" alt="Hero Image Placeholder">
         <div class="message">
@@ -50,7 +48,7 @@
         <p id="updated">Last Modification: <span id="lastMod"></span></p>
     </footer>
 
-    <script src="../scripts/weather.js"></script>
+
     <script src="../scripts/getDates.js"></script>
     <script src="scripts/script.js"></script>
 </body>
