--- a/chamber/join.html
+++ b/chamber/join.html
@@ -18,29 +18,27 @@
     <meta property="og:image" content="https://kevinmagli.github.io/chamber/images/sbc-hero.webp">
     <meta property="og:url" content="https://kevinmagli.github.io/">
 </head>
-<body onload="setTimestamp()">
+<body>
     <Button class="ham-menu">
         <span></span>
         <span></span>
         <span></span>
     </Button>
     <nav>
-        <a href="index">Home</a>
+        <a href="index.html">Home</a>
         <a href="discover.html">Discover</a>
-        <a href="#">Sales</a>
-        <a href="#">Events</a>
-        <a href="#">Jobs & Business</a>
-        <a href="#">Join Us</a>
+        <a id="currentLocation" href="join.html">Join Us</a>
+        <a href="directory.html">Members</a>
     </nav>
     <main id="join-page">
         <header>
             <img id="logo" src="images/logo.png" alt="SBC Chamber logo">
-            <h1>SBC Chamber of Commerce</h1>
+            <h1>SBC Chamber of Commerce - Join</h1>
         </header>
         <img id="hero" src="images/sbc-hero.webp" alt="Hero Image Placeholder">
         <div class="join-grid-container">
             <div class="form-background">
-                <form action="thankyou.html" method="post">
+                <form id="myForm" action="submit.php" method="post">
                     <div class="item">
                         <label class="required" for="first-name">*First Name: </label>
                         <input type="text" id="first-name" name="first-name" required>
@@ -62,8 +60,8 @@
                     </div>
                     
                     <div class="item">
-                        <label for="position">Title or Position: </label>
-                        <input type="text" id="position" name="position" pattern="[^\s-]{7,}$">
+                        <label for="position">*Title or Position: </label>
+                        <input type="text" id="position" name="position" pattern="[A-Za-z -]{7,}" required>
                     </div>
                 
                     <div class="item">
@@ -132,11 +130,12 @@
     <footer>
         <p>&copy;<span id="year"></span> Kevin Magliocchi - WDD 230</p>
         <p>Social Media:  <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">X</a></p>
-        <p> Contact Information: <a href="chamber.SBC@gmail.com">Email</a> | <a href="#">Phone: +55 11 3218-1923</a> | <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj1i7W91a6GAxXfrJUCHYqkC7cQ8gF6BAgnEAI&url=%2Fmaps%2Fplace%2FPra%25C3%25A7a%2BSamuel%2BSabatini%2B-%2BVila%2BMarchi%2C%2BS%25C3%25A3o%2BBernardo%2Bdo%2BCampo%2B-%2BSP%2C%2B09810-390%2Fdata%3D!4m2!3m1!1s0x94ce42338fed5499%3A0x194ef44477df4860%3Fsa%3DX%26ved%3D1t%3A242%26ictx%3D111&usg=AOvVaw0tKgEkNbd-EasjBJimTiub&opi=89978449">Address: Praça Samuel Sabatini, S/N - Centro, São Bernardo do Campo - SP, 09810-390</a></p>
+        <p> Contact Information: <a href="#">Email: chamber.SBC@gmail.com</a> | <a href="#">Phone: +55 11 3218-1923</a> | <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj1i7W91a6GAxXfrJUCHYqkC7cQ8gF6BAgnEAI&url=%2Fmaps%2Fplace%2FPra%25C3%25A7a%2BSamuel%2BSabatini%2B-%2BVila%2BMarchi%2C%2BS%25C3%25A3o%2BBernardo%2Bdo%2BCampo%2B-%2BSP%2C%2B09810-390%2Fdata%3D!4m2!3m1!1s0x94ce42338fed5499%3A0x194ef44477df4860%3Fsa%3DX%26ved%3D1t%3A242%26ictx%3D111&usg=AOvVaw0tKgEkNbd-EasjBJimTiub&opi=89978449">Address: Praça Samuel Sabatini, S/N - Centro, São Bernardo do Campo - SP, 09810-390</a></p>
         <p id="updated">Last Modification: <span id="lastMod"></span></p>
     </footer>
 
     <script src="../scripts/getDates.js"></script>
     <script src="scripts/join-script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
